[package]
name = "lets-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "pac"
path = "src/pac.rs"


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
